--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -8,7 +8,7 @@ config-version: 2
 model-paths: ["models"]
 test-paths: ["tests"]
 macro-paths: ["macros"]
-log-paths: ["logs"]
+log-path: "logs"
 
 target-path: "target" 
 clean-targets:
