--- a/macros/db/postgres/utils/utils.yml
+++ b/macros/db/postgres/utils/utils.yml
@@ -12,3 +12,13 @@ macros:
         description: column to be excluded
       - name: alias
         description: alias of the table to call the column (ex. t1.col1, the alias would be t1)
+# tab,src=0,prefix='',schema_src=''
+  - name: cool_formater
+    description: do automatic formatting in data
+    arguments:
+      - name: tab
+        description: Table name
+      - name: src
+        description: this informs the macro if it is a source table or ref table. 0=ref, 1=source and 2=query
+
+        
