--- a/macros/db/postgres/optimizers/optimizers.yml
+++ b/macros/db/postgres/optimizers/optimizers.yml
@@ -1,17 +1,19 @@
 version: 2
 
 macros:
-  - name: index
-    description: creates an index on a given column
+  - name: cool__indexer
+    description: creates an index on a given column with a given type
     arguments:
       - name: this
-        description: Source schema name
+        description: Table name
       - name: column
-        description: Source schema name
+        description: column name
+      - name: index_type
+        description: Type of index
   - name: uindex
     description: creates an unique index on a given column
     arguments:
       - name: this
-        description: Source schema name
+        description: Table name
       - name: column
-        description: Source schema name
+        description: Column name
